some attempts to get it working on java11